--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,8 @@
-inherit_from:
-- .rubocop_airbnb.yml
-- .rubocop_todo.yml
+inherit_from: .rubocop_todo.yml
+
+inherit_gem:
+  rubocop-shopify: rubocop.yml
 
 AllCops:
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 3.0
+  NewCops: enable
